# gpt-workbench

./: LICENSE  README.md
gptbench_cli/: Cargo.toml
gptbench_cli/examples/: rust_developer.json
gptbench_cli/src/: main.rs
gptbench_core/: Cargo.toml
gptbench_core/src/: chat.rs  lib.rs  models.rs
