[package]
name = "gptbench_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gptbench_core = { path = "../gptbench_core", version = "0.1.0" }

tokio = { version = "1.28.2", features = ["full"] }
clap = { version = "4.3.3", features = ["derive", "cargo"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
